# lib/db/src/schema/index.ts
@@ -1,2 +1,3 @@
 export * from "./foundation";
 export * from "./understanding";
+export * from "./connectors";
